changed package.json to deploy on github pages

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calculator_react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vsan21.github.io/React-Calculator",
   "dependencies": {
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
@@ -11,6 +12,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
